--- a/app/src/main/res/layout/item_rv_preguntas.xml
+++ b/app/src/main/res/layout/item_rv_preguntas.xml
@@ -51,7 +51,7 @@
                 android:layout_weight="1"
                 android:text="respuesta" />
 
-            <!--RadioButton
+            <RadioButton
                 android:id="@+id/radioButtonRespuesta2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="respuesta" /-->
+                android:text="respuesta" />
         </RadioGroup>
 
 
